--- a/css/styles.css
+++ b/css/styles.css
@@ -98,21 +98,44 @@ h3 {
   background-color: hsl(0, 0%, 100%);
   padding: 0.5rem 0.5rem;
   border-radius: var(--border-radius);
-  white-space: nowrap;
 }
 
 .badge--container {
   margin-bottom: 2rem;
-  display: block;
 }
 
 .badge--primary {
   color: var(--color-primary);
   font-size: 4rem;
-  font-weight: 600;
+  font-family: "Fraunces", serif;
 }
 
 .badge--small {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   text-decoration: line-through;
+}
+
+/* Button */
+.btn {
+  border-radius: var(--border-radius);
+  padding: 1.5rem 2rem;
+  width: 100%;
+  border-style: none;
+}
+
+.btn--primary {
+  background: var(--color-primary);
+  color: hsl(0, 0%, 100%);
+  font-size: 1.6rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.btn--primary:hover {
+  background-color: #0b341e; /* lighten(primary, 10%); SAS */
+}
+
+/* icon */
+.icon {
+  padding-right: 0.5rem;
 }
