--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,8 @@ h3 {
   border-radius: var(--border-radius);
   margin: 1rem;
   padding-bottom: 2rem;
-  width: 50%;
+  width: fit-content;
+  height: fit-content;
 }
 
 .card__body {
@@ -109,14 +110,15 @@ h3 {
 
 .price__item-primary {
   color: var(--color-primary);
-  font-size: 4rem;
+  font-size: 2.4rem;
   font-family: "Fraunces", serif;
-  margin-right: 2rem;
+  margin-right: 1rem;
 }
 
 .price__item-small {
   text-decoration: line-through;
   align-self: center;
+  font-size: 1.2rem;
 }
 
 /* Button */
