Adjust card size

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   background-color: hsl(30, 38%, 92%);
   color: var(--color-body);
   font-family: "Montserrat", sans-serif;
-  font-size: 1.4rem;
+  font-size: 0.8rem;
   line-height: 1.15;
 }
 
@@ -20,12 +20,12 @@ h3 {
 
 h1 {
   color: hsl(212, 21%, 14%);
-  font-size: 4rem;
+  font-size: 2rem;
   font-family: "Fraunces", serif;
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: 0.8rem;
   font-weight: 100;
   letter-spacing: 0.5rem;
   text-transform: uppercase;
@@ -33,7 +33,7 @@ h3 {
 
 @media screen and (min-width: 1440px) {
   h3 {
-    margin-top: 3rem;
+    margin-top: 1rem;
   }
 }
 
@@ -43,9 +43,7 @@ h3 {
   background-color: hsl(0, 0%, 100%);
   border-radius: var(--border-radius);
   margin: 1rem;
-  padding-bottom: 2rem;
-  width: fit-content;
-  height: fit-content;
+  max-width: 600px;
 }
 
 .card__body {
@@ -56,30 +54,36 @@ h3 {
 .card__image-mobile {
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
-  width: 100%;
+  max-width: 100%;
 }
 
 .card__image-desktop {
   border-top-left-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
-  width: 100%;
+  height: 100%;
   display: none;
 }
 
 .card__text {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 600px) {
   .card {
     padding: 0;
   }
+
+  .card__body {
+    padding: 1rem;
+  }
+
   .card__image-mobile {
     display: none;
   }
   .card__image-desktop {
     display: flex;
+    max-width: 100%;
   }
 }
 
@@ -88,7 +92,7 @@ h3 {
   display: grid;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 600px) {
   .grid--cols2 {
     grid-template-columns: 1fr 1fr;
   }
@@ -110,7 +114,7 @@ h3 {
 
 .price__item-primary {
   color: var(--color-primary);
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-family: "Fraunces", serif;
   margin-right: 1rem;
 }
@@ -118,13 +122,18 @@ h3 {
 .price__item-small {
   text-decoration: line-through;
   align-self: center;
-  font-size: 1.2rem;
+}
+
+@media screen and (min-width: 600px) {
+  .price--container {
+    margin-bottom: 2rem;
+  }
 }
 
 /* Button */
 .btn {
   border-radius: var(--border-radius);
-  padding: 1.5rem 2rem;
+  padding: 1rem 2rem;
   width: 100%;
   border-style: none;
 }
@@ -132,13 +141,20 @@ h3 {
 .btn--primary {
   background: var(--color-primary);
   color: hsl(0, 0%, 100%);
-  font-size: 1.6rem;
+  font-size: 1rem;
   font-weight: 600;
   cursor: pointer;
+  margin-bottom: 2rem;
 }
 
 .btn--primary:hover {
   background-color: #0b341e; /* lighten(primary, 10%); SAS */
+}
+
+@media screen and (min-width: 600px) {
+  .btn--primary {
+    margin-bottom: 0;
+  }
 }
 
 /* icon */
