--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 0.8rem;
   line-height: 1.15;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
 }
 
 h1,
@@ -42,7 +47,6 @@ h3 {
 .card {
   background-color: hsl(0, 0%, 100%);
   border-radius: var(--border-radius);
-  margin: 1rem;
   max-width: 600px;
 }
 
@@ -160,4 +164,9 @@ h3 {
 /* icon */
 .icon {
   padding-right: 0.5rem;
+}
+
+/* Attribution */
+.attribution {
+  margin-top: 4rem;
 }
